@@ -3,8 +3,10 @@ Release history for Text::FormBuilder.
 0.10
     * added support for fields with 'other' (requires FB 3.02)
     * added support for limited growth 'growable' fields
-    * allow end of field line comments
+    * allow end of field line comments in the formspec
     * addded an external_css option to include external stylesheets
+    * using <fieldset> tags instead of <h2> to mark form sections
+    * group fields can have comments
     
 0.09 - 10 Mar 2005
     * single-line textfields can be given a maxlength
